--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="" />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="./src/assets/oskm-logo.svg"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project</title>
+        <title>OSKM ITB 2022</title>
     </head>
 
     <body>
