feat: major bugfix, remove error, fix import, adding env

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="./src/assets/oskm-logo.svg"
+            href="./src/assets/images/oskm-logo.svg"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>OSKM ITB 2022</title>
