feat: remove base layout, adding env, fix ghost api

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             type="image/svg+xml"
             href="./src/assets/images/oskm-logo.svg"
         />
+        <!-- <meta
+            http-equiv="Content-Security-Policy"
+            content="upgrade-insecure-requests"
+        /> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>OSKM ITB 2022</title>
     </head>
