feat: adding min-height and change logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/svg+xml"
-            href="./src/assets/images/oskm-logo.svg"
+            href="./src/assets/images/logo-sementara.png"
         />
         <!-- <meta
             http-equiv="Content-Security-Policy"
