style: capitalize Deva

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         />
         <meta
             name="description"
-            content="Deva: Blog OSKM ITB 2022 merupakan website yang digunakan untuk mempublish hasil pengumuman dan materi"
+            content="DEVA: Blog OSKM ITB 2022 merupakan website yang digunakan untuk mempublish hasil pengumuman dan materi"
         />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Deva: Blog OSKM ITB 2022</title>
+        <title>DEVA: Blog OSKM ITB 2022</title>
     </head>
 
     <body>
